--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.1",
     "source-map-loader": "^0.2.4",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.3333",
+    "webpack-cli": "^3.2.3"
   }
 }
